--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
               <div id="button">
 
-                <button type="button" class="btn btn-outline-primary" onclick="addTodo()">ADD TODO</button>
+                <button type="button" id="mybtn" class="btn btn-outline-primary" onclick="addTodo()">ADD TODO</button>
                 <button type="button" class="btn btn-outline-danger" onclick="delAll()">DELETE ALL</button>
 
               </div>
