--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div id="form">
             <div class="form-group">
-                <input type="text" class="form-control" id="todoItem" placeholder="enter todo">
+                <input type="text" class="form-control" id="todoItem" placeholder="enter todo" required>
               </div>
 
               <div id="button">
